--- a/Develop/index.html
+++ b/Develop/index.html
@@ -25,7 +25,7 @@
   <body>
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
-      <h2 class= timer id="getTime"></h2>
+      <h2 class= timer></h2>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
