text area background color changed to whitesmoke

--- a/index.html
+++ b/index.html
@@ -18,30 +18,56 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="Assets/style.css"/>
+    <link rel="stylesheet" href="Assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
-      <h2 class= timer></h2>
+      <h2 class="timer"></h2>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="row">
-            <div class= "col-1">8am</div>
-            <textarea class="col-10"></textarea>
-            <button class="btn btn-primary col-1">Button</button>
-            <div class= "col-1">9am</div>
-            <textarea class="col-10"></textarea>
-            <button class="btn btn-primary col-1">Button</button>
+        <div class="col-1">8am</div>
+        <textarea class="col-10"> </textarea>
+        <button class="btn btn-primary col-1">Save</button>
+        <div class="col-1">9am</div>
+        <textarea class="col-10"> </textarea>
+        <button class="btn btn-primary col-1">Save</button>
+        <div class="col-1">10am</div>
+        <textarea class="col-10"></textarea>
+        <button class="btn btn-primary col-1">Save</button>
+        <div class="col-1">11am</div>
+        <textarea class="col-10"></textarea>
+        <button class="btn btn-primary col-1">Save</button>
+        <div class="col-1">12pm</div>
+        <textarea class="col-10"></textarea>
+        <button class="btn btn-primary col-1">Save</button>
+        <div class="col-1">1pm</div>
+        <textarea class="col-10"></textarea>
+        <button class="btn btn-primary col-1">Save</button>
+        <div class="col-1">2pm</div>
+        <textarea class="col-10"></textarea>
+        <button class="btn btn-primary col-1">Save</button>
+        <div class="col-1">3pm</div>
+        <textarea class="col-10"></textarea>
+        <button class="btn btn-primary col-1">Save</button>
+        <div class="col-1">4pm</div>
+        <textarea class="col-10"></textarea>
+        <button class="btn btn-primary col-1">Save</button>
+        <div class="col-1">5pm</div>
+        <textarea class="col-10"></textarea>
+        <button class="btn btn-primary col-1">Save</button>
+        <div class="col-1">6pm</div>
+        <textarea class="col-10"></textarea>
+        <button class="btn btn-primary col-1">Save</button>
       </div>
       <div></div>
       <div></div>
-
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
