--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Timeblocks go here -->
       <div class="row">
         <div class="col-1">8am</div>
-        <textarea class="col-10"> </textarea>
+        <textarea id="8" class="col-10"> </textarea>
         <button class="btn btn-primary col-1">Save</button>
         <div class="col-1">9am</div>
         <textarea class="col-10"> </textarea>
