added id to row added ids to css and added function to change colors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row">
+      <div class="row" id="timeblocks">
         <div class="col-1">8am</div>
         <textarea id="8" class="col-10"> </textarea>
         <button class="btn btn-primary col-1">Save</button>
