--- a/index.html
+++ b/index.html
@@ -31,40 +31,40 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="time-block" id="timeblocks">
+      <div class="time-block">
         <div class="col-1">8am</div>
-        <textarea id="8" class="col-10"> </textarea>
-        <button class="btn btn-primary col-1">Save</button>
+        <textarea  class="col-10"> </textarea>
+        <button class="btn btn-primary col-1" id="saveBtn">Save</button>
         <div class="col-1">9am</div>
-        <textarea id= "9" class="col-10"> </textarea>
-        <button class="btn btn-primary col-1">Save</button>
+        <textarea class="col-10"> </textarea>
+        <button class="btn btn-primary col-1"id="saveBtn" >Save</button>
         <div class="col-1">10am</div>
-        <textarea id= "10" class="col-10"></textarea>
-        <button class="btn btn-primary col-1">Save</button>
+        <textarea  class="col-10"></textarea>
+        <button class="btn btn-primary col-1" id="saveBtn">Save</button>
         <div class="col-1">11am</div>
-        <textarea id= "11" class="col-10"></textarea>
-        <button class="btn btn-primary col-1">Save</button>
+        <textarea class="col-10"></textarea>
+        <button class="btn btn-primary col-1" id="saveBtn">Save</button>
         <div class="col-1">12pm</div>
-        <textarea id= "12"class="col-10"></textarea>
-        <button class="btn btn-primary col-1">Save</button>
+        <textarea class="col-10"></textarea>
+        <button class="btn btn-primary col-1" id="saveBtn">Save</button>
         <div class="col-1">1pm</div>
-        <textarea id= "1" class="col-10"></textarea>
-        <button class="btn btn-primary col-1">Save</button>
+        <textarea  class="col-10"></textarea>
+        <button class="btn btn-primary col-1" id="saveBtn">Save</button>
         <div class="col-1">2pm</div>
-        <textarea id= "2" class="col-10"></textarea>
-        <button class="btn btn-primary col-1">Save</button>
+        <textarea  class="col-10"></textarea>
+        <button class="btn btn-primary col-1" id="saveBtn">Save</button>
         <div class="col-1">3pm</div>
-        <textarea id="3" class="col-10"></textarea>
-        <button class="btn btn-primary col-1">Save</button>
+        <textarea class="col-10"></textarea>
+        <button class="btn btn-primary col-1" id="saveBtn">Save</button>
         <div class="col-1">4pm</div>
-        <textarea id= "4" class="col-10"></textarea>
-        <button class="btn btn-primary col-1">Save</button>
+        <textarea  class="col-10"></textarea>
+        <button class="btn btn-primary col-1" id="saveBtn">Save</button>
         <div class="col-1">5pm</div>
-        <textarea id= "5" class="col-10"></textarea>
-        <button class="btn btn-primary col-1">Save</button>
+        <textarea class="col-10"></textarea>
+        <button class="btn btn-primary col-1" id="saveBtn">Save</button>
         <div class="col-1">6pm</div>
-        <textarea id= "6"class="col-10"></textarea>
-        <button class="btn btn-primary col-1">Save</button>
+        <textarea class="col-10"></textarea>
+        <button class="btn btn-primary col-1" id="saveBtn" >Save</button>
       </div>
       <div></div>
       <div></div>
